--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="ru">
 <head>
 	<meta  charset="UTF-8">
-	<title>Работа с html</title>
+	<title>html</title>
   <head/>
   <body>
   <header>
-  <h1>HELLO </h1>
+  <h1>HELLO HTML</h1>
   <p>Задание по HTML </p>
-  <img src="HTML5.jpg">
+  <img src="HTML5.jpg" alt="IMG HTML">
   </header>
   </body>
   </html>
